syntax = "proto3";

package user;


message query{}

message user{
  string _id=1;
  string name = 2;
  string phone=3;
  string email=4;
  string address=5;
  string role=6;
}
message createUser{
    string name = 1;
    string phone=2;
    string email=3;
    string address=4;
}
// message id{
//   string id = 1;
// }
service UsersService {
  // rpc todos (query) returns (todos) {}
  // rpc example (query) returns (resex) {}
  rpc createUser (createUser) returns(user){}
  // rpc getTodoById (id) returns(todo){}
}
